Components/ResumeDoc/ResumeDoc.module.css
.page {
  display: grid;
  grid-template-columns: 2fr 3fr;
  padding: 40px;
}

.projects {
  text-align: left;
}

.contact {
  background-color: #2a3e5f;
  color: white;
  text-align: right;
  padding: 20px;
  display: flex;
  flex-direction: column;
}

.experience {
  padding: 20px;
}

.links {
  display: flex;
  flex-direction: column;
}

